--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("./styles/LoggedInHome.css");
 
 #root {
   width: 100vw;
@@ -8,5 +9,5 @@
 }
 
 .container {
-  @apply w-full h-full flex flex-col justify-center items-center mx-auto p-5;
+  @apply w-full h-full flex flex-col justify-center items-center mx-auto p-5 box-border;
 }
