--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("./styles/myPage.css");
+@import url("./styles/MyPage.css");
 @import url("./styles/common.css");
 
 #root {
