chore : tailwind를 위한 background 파일 설정

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @import url("./styles/myPage.css");
 @import url("./styles/common.css");
 @import url("./styles/loading.css");
+@import url("./styles/home.css");
 
 #root {
   width: 100vw;
