--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,5 +1,5 @@
 .container {
-  @apply w-full h-full flex flex-col justify-center items-center mx-auto p-5 box-border overflow-scroll;
+  @apply w-screen h-full flex flex-col justify-center items-center  p-5 box-border overflow-scroll bg-emerald-200;
 }
 
 .modalBg {
