--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("./styles/MyPage.css");
+@import url("./styles/myPage.css");
 @import url("./styles/common.css");
 @import url("./styles/loading.css");
 @import url("./styles/home.css");
@@ -17,22 +17,22 @@
 
 #userBtn {
   padding: 10px;
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
 }
 
 #myPageDesc {
   text-align: center;
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
 }
 
-#myPageReal{
-  background-color: #FEEBB6;
+#myPageReal {
+  background-color: #feebb6;
 }
 
-#time-script{
+#time-script {
   overflow: scroll;
 }
 
-#hidden-scroll-page{
+#hidden-scroll-page {
   overflow: hidden;
 }
